syntax="proto3";

package proto;

option go_package="./proto";

import "google/api/annotations.proto";

service UserService {
  rpc Login(LoginRequest) returns (LoginResponse){
    option (google.api.http) = {
      post:"/login"
      body:"*"
    };
  }
  rpc Register(RegisterRequest) returns (RegisterResponse){
    option (google.api.http) = {
      post:"/register"
      body:"*"
    };
  }
}

message RegisterRequest{
  string username = 1;
  string password = 2;
  string password2 = 3;
}

message LoginRequest{
  string username = 1;
  string password = 2;
}

message LoginResponse{
  string username = 1;
  string img_url = 2;
  string token = 3;
}
message RegisterResponse{
  string username = 1;
  uint64 id = 2;
}